# persistence-atlas

./: README  gaussians.sh  startingVortex.sh  vortexStreet.sh
scripts/: gaussians.sh  isabella.sh  runtime.sh  seaSurfaceHeight.sh  startingVortex.sh  vortexStreet.sh
scritps/: isabella.sh  runtime.sh  seaSurfaceHeight.sh
ttk/: CMakeLists.txt
ttk/core/: CMakeLists.txt
ttk/core/base/clustering/: CMakeLists.txt  Clustering.cpp  Clustering.h  clustering.py
ttk/core/base/common/: Os.h
ttk/core/base/ftmTree/: CMakeLists.txt
ttk/core/base/lDistance/: LDistance.h
ttk/core/base/lDistanceMatrix/: CMakeLists.txt  LDistanceMatrix.cpp  LDistanceMatrix.h
ttk/core/base/mandatoryCriticalPoints/: MandatoryCriticalPoints.cpp  MandatoryCriticalPoints.h
ttk/core/base/persistenceMap/: CMakeLists.txt  PersistenceMap.cpp  PersistenceMap.h
ttk/core/base/spectralEmbedding/: CMakeLists.txt  SpectralEmbedding.cpp  SpectralEmbedding.h  spectralEmbedding.py
ttk/core/base/uncertainDataEstimator/: UncertainDataEstimator.cpp  UncertainDataEstimator.h
ttk/core/vtk/ttkClustering/: CMakeLists.txt  ttkClustering.cpp  ttkClustering.h
ttk/core/vtk/ttkLDistanceMatrix/: CMakeLists.txt  ttkLDistanceMatrix.cpp  ttkLDistanceMatrix.h
ttk/core/vtk/ttkMandatoryCriticalPoints/: ttkMandatoryCriticalPoints.cpp  ttkMandatoryCriticalPoints.h
ttk/core/vtk/ttkPersistenceMap/: CMakeLists.txt  ttkPersistenceMap.cpp  ttkPersistenceMap.h
ttk/core/vtk/ttkSortScalarField/: CMakeLists.txt  ttkSortScalarField.cpp  ttkSortScalarField.h
ttk/core/vtk/ttkSpectralEmbedding/: CMakeLists.txt  ttkSpectralEmbedding.cpp  ttkSpectralEmbedding.h
ttk/core/vtk/ttkUncertainDataEstimator/: ttkUncertainDataEstimator.cpp  ttkUncertainDataEstimator.h
ttk/standalone/PersistenceAtlas/cmd/: CMakeLists.txt  main.cpp  main.h
